--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -1,7 +1,9 @@
 name: Go Test on Pull Request
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
@@ -20,4 +22,4 @@ jobs:
         run: go mod download
 
       - name: Run tests
-        run: go test ./test -v
+        run: go test ./test
