--- a/.github/workflows/packer_validate.yml
+++ b/.github/workflows/packer_validate.yml
@@ -1,22 +1,15 @@
-name: Go Test on Pull Request
+name:  Packer validate on Pull Request
 
 on:
   workflow_dispatch:
 
 jobs:
-  webapp_test:
+  packer_validate:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -26,21 +19,12 @@ jobs:
       - name: Setup packer
         uses: hashicorp/setup-packer@main
 
-      - name: Get location
-        run: pwd
-
-      - name: Install dependencies
-        run: go mod download
-
-      - name: Run tests
-        run: go test ./test
+      - name: Format packer
+        run: packer fmt webapp_ami_packer.pkr.hcl
       
-      - name: Build webapp executable file
-        run: GOOS=linux GOARCH=amd64 go build -o webapp
-      
-      - name: Build AMI with Packer
+      - name: Validate packer
         run: |
-          packer build \
+          packer validate \
             -var "aws_region=${{ secrets.AWS_REGION }}" \
             -var "source_ami=${{ secrets.SOURCE_AMI }}" \
             -var "instance_type=${{ secrets.INSTANCE_TYPE }}" \
@@ -50,3 +34,8 @@ jobs:
             -var "ami_name=${{ secrets.AMI_NAME }}" \
             -var "mysql_pwd=${{ secrets.DB_PWD }}" \
             webapp_ami_packer.pkr.hcl
+      
+      - name: Run Go tests
+        run: go test ./test
+
+        
