--- a/.github/workflows/after_pull_rq.yml
+++ b/.github/workflows/after_pull_rq.yml
@@ -1,7 +1,9 @@
 name: Packer Build and Go test after Pull Request
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   after_pull_rq:
