--- a/.github/workflows/before_pull_rq.yml
+++ b/.github/workflows/before_pull_rq.yml
@@ -37,7 +37,7 @@ jobs:
         run: packer init webapp_ami_packer.pkr.hcl
 
       - name: Format packer
-        run: packer fmt webapp_ami_packer.pkr.hcl
+        run: packer fmt -check webapp_ami_packer.pkr.hcl
       
       - name: Validate packer
         run: |
