--- a/webapp.service
+++ b/webapp.service
@@ -5,6 +5,10 @@ After=network.target mysql.service
 [Service]
 EnvironmentFile=/etc/environment
 ExecStart=/opt/webapp
+Restart=on-failure
+RestartSec=2
+StartLimitIntervalSec=0
+StartLimitBurst=0
 User=csye6225
 Group=csye6225
 Restart=on-failure
